r76 (11. 08. 2022):
Added Crit Chance Buff
Added tracker for the Piggy Bank Anniversary Event
Fixed an issue where achievements and other non-mission trackers did not work correctly when "Mission Trackers" option is disabled
Watchdogs Day 2: Fixed an issue where achievement "Out Of Bounds" showed when the number of secured bags is not 12

r75 (09. 08. 2022):
Fixed an issue where syncing does not work correctly when "Show Mission Trackers" option is disabled
Fixed an issue where some mission trackers were still visible when "Show Mission Trackers" option is disabled
Hotline Miami Day 1: Fixed an issue where clients can't see methlab restart delay (no ingredients put in)

r74 (06. 08. 2022):
Added trackers for Smackdown custom heist
Added trackers for Truck Hustle custom heist
Added "Show Camera Loop" option
Branchbank: Fixed an issue where achievement tracker "Saint Francis" did not fail when one of punks despawned

r73 (05. 08. 2022):
Added Forced Friendship Absorption buff
Fixed an issue where achievement tracker "A Good Haul" is not visible in Escapes if active mission is Branchbank
Branchbank: Added tracker for achievement "Saint Francis"
Goat Simulator Day 1: Fixed a load crash when "Show hint for every XP" option is selected

r72 (03. 08. 2022):
Added popups for achievements related to Gage Packages
Biker Heist: Added achievement tracker for "Let the Man Work"
Election Day: Added achievement tracker for "Storage Hunter"
Escape: Garage: Added achievement tracker for "They See Me Baggin', They Hatin'"
Midland Ranch Heist: Fixed an issue where trackers were not visible on client

r71 (29. 07. 2022):
Added Berserker buff
Fixed an issue where camera loop tracker is still visible after the looped camera was destroyed
Buluc's Mansion: Added achievement tracker for "Everything but the Patio Furniture"

r70 (22. 07. 2022):
Fixed Stoic buffs
Black Cat: Added achievement tracker for "One Claw Beam Cutter"

r69 (18. 07. 2022):
Added inspire boost cooldown buff