@@ -1,7 +1,10 @@
+local lerp = math.lerp
+local sin = math.sin
+local Color = Color
 EHIPiggyBankMutatorTracker = class(EHIProgressTracker)
 function EHIPiggyBankMutatorTracker:init(panel, params)
     self._current_level = 1
-    self._max_levels = 6
+    self._max_levels = 7
     params.flash_times = 1
     params.icons = { "piggy" }
     EHIPiggyBankMutatorTracker.super.init(self, panel, params)
@@ -45,66 +48,88 @@ function EHIPiggyBankMutatorTracker:SetNewMax()
     self:FitTheText()
 end
 
-function EHIPiggyBankMutatorTracker:update(t, dt)
-    self._time = self._time - dt
-    if self._time <= 0 then
-        self:RemoveTrackerFromUpdate()
-        self._text:stop()
-        self:SetTextColor(Color.white)
-        self._levels_text:set_color(Color.white)
+function EHIPiggyBankMutatorTracker:CheckLevelFromKills()
+    if self._progress == 0 then -- The game has not started yet or players haven't secured bags yet
+        return
+    end
+    local tweak_data = tweak_data.mutators.piggybank.pig_levels
+    local n = table.size(tweak_data)
+    local offset =
+    {
+        [1] = 1,
+        [2] = 1
+    }
+    local done = false
+    for i = 1, n, 1 do
+        local max = (tweak_data[i].bag_requirement or 0) + (offset[i] or 0)
+        if max > self._progress then
+            self._current_level = i
+            self._max = max
+            self._text:set_text(self:Format())
+            self:FitTheText()
+            done = true
+            break
+        end
+    end
+    if not done and self._progress >= (tweak_data[n].bag_requirement or 0) then
+        self._current_level = 6
+        self:SetCompleted()
     end
 end
 
 function EHIPiggyBankMutatorTracker:SetCompleted(force)
-    if self._current_level >= self._max_levels then
+    self._current_level = self._current_level + 1
+    if self._current_level == self._max_levels then
         self._disable_counting = true
         self._text:set_text("MAX")
         self:FitTheText()
         self:SetTextColor(Color.green)
-        self._levels_text:set_color(Color.green)
     else
-        self._current_level = self._current_level + 1
         self:SetNewMax()
         self._time = 3
-        self:AddTrackerToUpdate()
         self:AnimateNewLevel()
     end
     self._levels_text:set_text(self:FormatLevels())
 end
 
 function EHIPiggyBankMutatorTracker:SyncLoad(data)
-    self._current_level = data.pig_level
-    self._progress = data.pig_fed_count
-    self:SetNewMax()
-    if self._current_level >= self._max_levels then
-        self:SetCompleted()
+    if data.exploded_pig_level then
+        self:delete()
+        return
     end
+    self._progress = data.pig_fed_count
+    self:CheckLevelFromKills()
 end
 
 function EHIPiggyBankMutatorTracker:AnimateNewLevel()
     if self._text and alive(self._text) then
-        local start_t = check_progress and (min(EHI:RoundNumber(self._time, 0.1) - floor(self._time), 0.99)) or 0
         self._text:animate(function(o)
-            while true do
-                local t = start_t
+            local spins = 1
+            while spins <= 3 do
+                local t = 0
                 while t < 1 do
                     t = t + coroutine.yield()
                     local n = 1 - sin(t * 180)
                     --local r = lerp(1, 0, n)
                     local g = lerp(1, 0, n)
                     local c = Color(g, 1, g)
-                    o:set_color(c)
-                    self._levels_text:set_color(c)
+                    self:SetTextColor(c)
                 end
-                start_t = 0
+                spins = spins + 1
             end
+            self:SetTextColor(Color.white)
         end)
     end
 end
 
-function EHIPiggyBankMutatorTracker:destroy()
+function EHIPiggyBankMutatorTracker:SetTextColor(color)
+    self._levels_text:set_color(color)
+    EHIPiggyBankMutatorTracker.super.SetTextColor(self, color)
+end
+
+function EHIPiggyBankMutatorTracker:delete()
     if self._text and alive(self._text) then
         self._text:stop()
     end
-    EHIPiggyBankMutatorTracker.super.destroy(self)
+    EHIPiggyBankMutatorTracker.super.delete(self)
 end
